--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
-  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
+  "author": "Apsicle",
+  "name": "Spotify-Shuffler",
+  "description": "Literally just shuffles your saved tracks using Fisher-Yates algorithm",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "version": "0.0.1",
   "dependencies": {
     "cookie-parser": "1.3.2",
-    "express": "~4.0.0",
+    "ejs": "~1.0.0",
+    "express": "~4.9.8",
     "querystring": "~0.2.0",
     "request": "~2.34.0"
   }
+
 }
